created git ignore file and install sass compiler

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Saas Html</title>
+    <link rel="stylesheet" href="css/all.css" />
+    <title>Sass Project</title>
   </head>
   <body>
-    <div id="wrapper"></div>
+    <div id="wrapper">
+      <div class="container">
+        <header id="header">
+          <a href="#" class="logo"
+          ><img src="images/logo.png" alt="company logo"
+          /></a>
+          <nav id="nav">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">Partners</a></li>
+              <li><a href="#">About Us</a></li>
+            </ul>
+          </nav>
+        </header>
+      </div>
+    </div>
   </body>
 </html>
