--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/all.css" />
+    <link rel="stylesheet" href="css/global.css" />
     <title>Sass Project</title>
   </head>
   <body>
     <div id="wrapper">
-      <div class="container">
         <header id="header">
-          <a href="#" class="logo"
-          ><img src="images/logo.png" alt="company logo"
-          /></a>
+          <div class="container" id="header-flex">
+          <a href="#"><img class="logo" src="images/logo.png" /></a>
           <nav id="nav">
             <ul>
               <li><a href="#">Home</a></li>
-              <li><a href="#">Products</a></li>
-              <li><a href="#">Partners</a></li>
-              <li><a href="#">About Us</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Journal</a></li>
+              <li><a href="#">service</a></li>
+              <li><a href="#">features</a></li>
+              <li><a href="#">contact</a></li>
             </ul>
           </nav>
+          </div>
         </header>
-      </div>
     </div>
   </body>
 </html>
