--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             </ul>
           </nav>
           </div>
+          <section class="banner">
+            <div class="banner-centering">
+              <h1>We are a digital & branding agency based in London.</h1>
+              <h2>We love to turn great ideas into beautiful products.</h2>
+              <button class="btn">See portfolio</button>
+            </div>
+          </section>
         </header>
     </div>
   </body>
