JO-12 service section completed.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,31 @@
             </div>
           </section>
         </header>
+
+      <div class="container">
+        <div class="services-section">
+          <div>
+            <img src="images/icon-1.png" alt="icon 1"/>
+            <h1>Pellentesque</h1>
+            <p>Nulla vitae  libero, a pharetra augue. Integer posuere erat a ante venenatis condimentum velit dapibus.</p>
+          </div>
+          <div>
+            <img src="images/icon-2.png" alt="icon 2"/>
+            <h1>Consectetur</h1>
+            <p>Vestibulum id ligula porta  euismod semper. Aenean lacinia bibendum nulla sed consectetur dui.</p>
+          </div>
+          <div>
+            <img src="images/icon-3.png" alt="icon 3"/>
+            <h1>Tristiquet</h1>
+            <p>Fusce dapibus, cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo risus.</p>
+          </div>
+          <div>
+            <img src="images/icon-4.png" alt="icon 4"/>
+            <h1>Fermentum</h1>
+            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum sagittis lacus mollis.</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
