JO-13 works column section completed.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
           </section>
         </header>
-
+     <main id="main">
       <div class="container">
         <div class="services-section">
           <div>
@@ -55,7 +55,32 @@
             <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum sagittis lacus mollis.</p>
           </div>
         </div>
+        <div class="section-work">
+          <h1>Our Latest Works</h1>
+          <div class="section-work-grid">
+            <div>
+              <img src="images/img-1.png" alt="img 1"/>
+              <h1>Nobis Business Card</h1>
+              <h2>Business Card, Graphic</h2>
+              <p>Sed posuere consectetur est at lobortis. Porta sagittis lacus vel augue laoreet rutrum.</p>
+            </div>
+            <div>
+              <img src="images/img-2.png" alt="img 2"/>
+              <h1>New Fun Project</h1>
+              <h2>Web Design, Application</h2>
+              <p>Nulla vitae elit libero, a pharetra augue. Donec sed odio dui. Vestibulum id ligula porta felis.</p>
+            </div>
+            <div>
+              <img src="images/img-3.png" alt="img 3"/>
+              <h1>Passionaries Branding Cover</h1>
+              <h2>Branding, Graphic Design</h2>
+              <p>Curabitur blandit tempus porttitor. Donec id elit non mi porta gravida at eget metus.</p>
+            </div>
+
+          </div>
+        </div>
       </div>
+     </main>
     </div>
   </body>
 </html>
