JO-14 slick slider section completed.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/slick-slider.css" />
+    <link rel="stylesheet" href="css/font-awesome.css" />
+    <link rel="stylesheet" href="css/slick.min.css" />
+    <link rel="stylesheet" href="css/slick-theme.min.css" />
     <title>Sass Project</title>
   </head>
   <body>
@@ -76,11 +80,46 @@
               <h2>Branding, Graphic Design</h2>
               <p>Curabitur blandit tempus porttitor. Donec id elit non mi porta gravida at eget metus.</p>
             </div>
-
           </div>
         </div>
       </div>
+       <section class="section-testmonials">
+         <div class="container full-width">
+           <div class="bf-testimonial-slick">
+             <div class="bf-testimonial-slick-single">
+               <div class="bf-testimonial-title">
+                 <i class="fas fa-quote-right"></i>
+               </div>
+               <div class="bf-testimonial-message">
+                 <p>
+                   Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus erat porttitor.
+                 </p>
+               </div>
+             </div>
+             <div class="bf-testimonial-slick-single">
+               <div class="bf-testimonial-title">
+                 <i class="fas fa-quote-right"></i>
+               </div>
+               <div class="bf-testimonial-message">
+                 <p>After WordPress release 5.0 with Gutenberg as a default editor, I really annoying with it. But Qubely makes it so easy.</p>
+               </div>
+             </div>
+             <div class="bf-testimonial-slick-single">
+               <div class="bf-testimonial-title">
+                 <i class="fas fa-quote-right"></i>
+               </div>
+               <div class="bf-testimonial-message">
+                 <p>I strongly believe Gutenberg haters gonna love this as well 😀 Polished, organized, well planned, eye catching and useful Gutenberg</p>
+               </div>
+             </div>
+
+           </div>
+         </div>
+       </section>
      </main>
     </div>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/custom.js"></script>
   </body>
 </html>
