JO-15 footer section completed.

--- a/index.html
+++ b/index.html
@@ -117,6 +117,43 @@
          </div>
        </section>
      </main>
+      <footer id="footer">
+        <div class="container" id="footer-grid">
+          <div>
+            <h1>Get In Touch</h1>
+            <h2>Fusce dapibus, tellus commodo, tortor mauris condimentum utellus fermentum, porta sem malesuada magna. </h2>
+            <p class="d-flex"><i class="fas fa-map-marker-alt"></i> Moonshine Street No: 14/05 Light City, Jupiter</p>
+            <p class="d-flex"><i class="fas fa-tty"></i> 0247 541 65 87</p>
+            <p class="d-flex"><i class="fas fa-envelope"></i> support@longwave.com</p>
+          </div>
+          <div>
+            <h1>Twitter</h1>
+            <h2 class="d-flex"><i class="fab fa-twitter"></i> Aenean lacinia bibendum nulla sed leo posuere erat a ante venenatis dapibus posuere velit aliquet.</h2>
+            <h2 class="d-flex"><i class="fab fa-twitter"></i> Donec ullamcorper metus auctor fringilla. Nullam quis risus eget.</h2>
+            <h2 class="d-flex"><i class="fab fa-twitter"></i> Vestibulum id ligula porta  euismod semper. Maecenas faucibus mollis.</h2>
+          </div>
+          <div>
+            <h1>Popular Posts</h1>
+            <h2>Vivamus sagittis lacus vel augue laoreet rutrum dolor auctor.
+            <span>14 Nov, 2012</span>
+            </h2>
+            <h2>Scelerisque nisl consectetur et.
+              <span>22 May, 2012</span>
+            </h2>
+            <h2>Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+              <span>15 July, 2012</span>
+            </h2>
+          </div>
+          <div>
+            <h1>About Us</h1>
+            <h2>Vestibulum id ligula porta felis euismod semper. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. </h2>
+            <h2>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus curabitur blandit <tempus class=""></tempus></h2>
+          </div>
+        </div>
+        <div id="footer-copyright">
+          <p>© 2013 Marble. All rights reserved. Theme by elemis.</p>
+        </div>
+      </footer>
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
