--- a/index.html
+++ b/index.html
@@ -1,162 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/global.css" />
-    <link rel="stylesheet" href="css/slick-slider.css" />
-    <link rel="stylesheet" href="css/font-awesome.css" />
-    <link rel="stylesheet" href="css/slick.min.css" />
-    <link rel="stylesheet" href="css/slick-theme.min.css" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="css/global.css"/>
+    <link rel="stylesheet" href="css/slick-slider.css"/>
+    <link rel="stylesheet" href="css/font-awesome.css"/>
+    <link rel="stylesheet" href="css/slick.min.css"/>
+    <link rel="stylesheet" href="css/slick-theme.min.css"/>
     <title>Sass Project</title>
-  </head>
-  <body>
-    <div id="wrapper">
-        <header id="header">
-          <div class="container" id="header-flex">
-          <a href="#"><img class="logo" src="images/logo.png" /></a>
-          <nav id="nav">
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Journal</a></li>
-              <li><a href="#">service</a></li>
-              <li><a href="#">features</a></li>
-              <li><a href="#">contact</a></li>
-            </ul>
-          </nav>
-          </div>
-          <section class="banner">
-            <div class="banner-centering">
-              <h1>We are a digital & branding agency based in London.</h1>
-              <h2>We love to turn great ideas into beautiful products.</h2>
-              <button class="btn">See portfolio</button>
-            </div>
-          </section>
-        </header>
-     <main id="main">
-      <div class="container">
-        <div class="services-section">
-          <div>
-            <img src="images/icon-1.png" alt="icon 1"/>
-            <h1>Pellentesque</h1>
-            <p>Nulla vitae  libero, a pharetra augue. Integer posuere erat a ante venenatis condimentum velit dapibus.</p>
-          </div>
-          <div>
-            <img src="images/icon-2.png" alt="icon 2"/>
-            <h1>Consectetur</h1>
-            <p>Vestibulum id ligula porta  euismod semper. Aenean lacinia bibendum nulla sed consectetur dui.</p>
-          </div>
-          <div>
-            <img src="images/icon-3.png" alt="icon 3"/>
-            <h1>Tristiquet</h1>
-            <p>Fusce dapibus, cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo risus.</p>
-          </div>
-          <div>
-            <img src="images/icon-4.png" alt="icon 4"/>
-            <h1>Fermentum</h1>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum sagittis lacus mollis.</p>
-          </div>
+</head>
+<body>
+<div id="wrapper">
+    <header id="header">
+        <div class="container d-flex justify-content-between align-items-center header-flex">
+            <a href="#"><img class="logo" src="images/logo.png"/></a>
+            <nav id="nav">
+                <ul class="d-flex">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Journal</a></li>
+                    <li><a href="#">service</a></li>
+                    <li><a href="#">features</a></li>
+                    <li><a href="#">contact</a></li>
+                </ul>
+            </nav>
         </div>
-        <div class="section-work">
-          <h1>Our Latest Works</h1>
-          <div class="section-work-grid">
-            <div>
-              <img src="images/img-1.png" alt="img 1"/>
-              <h1>Nobis Business Card</h1>
-              <h2>Business Card, Graphic</h2>
-              <p>Sed posuere consectetur est at lobortis. Porta sagittis lacus vel augue laoreet rutrum.</p>
+    </header>
+    <main id="main">
+        <section class="banner">
+            <div class="banner-centering d-flex align-items-center justify-content-center">
+                <h1>We are a digital & branding agency based in London.</h1>
+                <h2>We love to turn great ideas into beautiful products.</h2>
+                <button class="btn btn-primary">See portfolio</button>
             </div>
-            <div>
-              <img src="images/img-2.png" alt="img 2"/>
-              <h1>New Fun Project</h1>
-              <h2>Web Design, Application</h2>
-              <p>Nulla vitae elit libero, a pharetra augue. Donec sed odio dui. Vestibulum id ligula porta felis.</p>
+        </section>
+        <div class="container">
+            <div class="services-section">
+                <div class="col">
+                    <img src="images/icon-1.png" alt="icon 1"/>
+                    <h3 class="text-center">Pellentesque</h3>
+                    <p class="text-center">Nulla vitae libero, a pharetra augue. Integer posuere erat a ante venenatis
+                        condimentum velit dapibus.</p>
+                </div>
+                <div class="col">
+                    <img src="images/icon-2.png" alt="icon 2"/>
+                    <h3 class="text-center">Consectetur</h3>
+                    <p class="text-center">Vestibulum id ligula porta euismod semper. Aenean lacinia bibendum nulla sed
+                        consectetur dui.</p>
+                </div>
+                <div class="col">
+                    <img src="images/icon-3.png" alt="icon 3"/>
+                    <h3 class="text-center">Tristiquet</h3>
+                    <p class="text-center">Fusce dapibus, cursus commodo, tortor mauris condimentum nibh, ut fermentum
+                        massa justo
+                        risus.</p>
+                </div>
+                <div class="col">
+                    <img src="images/icon-4.png" alt="icon 4"/>
+                    <h3 class="text-center">Fermentum</h3>
+                    <p class="text-center">Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum
+                        sagittis lacus
+                        mollis.</p>
+                </div>
             </div>
-            <div>
-              <img src="images/img-3.png" alt="img 3"/>
-              <h1>Passionaries Branding Cover</h1>
-              <h2>Branding, Graphic Design</h2>
-              <p>Curabitur blandit tempus porttitor. Donec id elit non mi porta gravida at eget metus.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-       <section class="section-testmonials">
-         <div class="container full-width">
-           <div class="bf-testimonial-slick">
-             <div class="bf-testimonial-slick-single">
-               <div class="bf-testimonial-title">
-                 <i class="fas fa-quote-right"></i>
-               </div>
-               <div class="bf-testimonial-message">
-                 <p>
-                   Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus erat porttitor.
-                 </p>
-               </div>
-             </div>
-             <div class="bf-testimonial-slick-single">
-               <div class="bf-testimonial-title">
-                 <i class="fas fa-quote-right"></i>
-               </div>
-               <div class="bf-testimonial-message">
-                 <p>After WordPress release 5.0 with Gutenberg as a default editor, I really annoying with it. But Qubely makes it so easy.</p>
-               </div>
-             </div>
-             <div class="bf-testimonial-slick-single">
-               <div class="bf-testimonial-title">
-                 <i class="fas fa-quote-right"></i>
-               </div>
-               <div class="bf-testimonial-message">
-                 <p>I strongly believe Gutenberg haters gonna love this as well 😀 Polished, organized, well planned, eye catching and useful Gutenberg</p>
-               </div>
-             </div>
+            <div class="section-work">
+                <h3>Our Latest Works</h3>
+                <div class="section-work-grid d-flex">
+                    <div class="col">
+                        <img class="img-responsive" src="images/img-1.png" alt="img 1"/>
+                        <div>
+                            <h4>Nobis Business Card</h4>
+                            <h5>Business Card, Graphic</h5>
+                            <p>Sed posuere consectetur est at lobortis. Porta sagittis lacus vel augue laoreet
+                                rutrum.</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img class="img-responsive" src="images/img-2.png" alt="img 2"/>
+                        <div>
+                            <h4>New Fun Project</h4>
+                            <h5>Web Design, Application</h5>
+                            <p>Nulla vitae elit libero, a pharetra augue. Donec sed odio dui. Vestibulum id ligula porta
+                                felis.</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img class="img-responsive" src="images/img-3.png" alt="img 3"/>
+                        <div>
+                            <h4>Passionaries Branding Cover</h4>
+                            <h5>Branding, Graphic Design</h5>
+                            <p>Curabitur blandit tempus porttitor. Donec id elit non mi porta gravida at eget metus.</p>
+                        </div>
 
-           </div>
-         </div>
-       </section>
-     </main>
-      <footer id="footer">
-        <div class="container" id="footer-grid">
-          <div>
-            <h1>Get In Touch</h1>
-            <h2>Fusce dapibus, tellus commodo, tortor mauris condimentum utellus fermentum, porta sem malesuada magna. </h2>
-            <p class="d-flex"><i class="fas fa-map-marker-alt"></i> Moonshine Street No: 14/05 Light City, Jupiter</p>
-            <p class="d-flex"><i class="fas fa-tty"></i> 0247 541 65 87</p>
-            <p class="d-flex"><i class="fas fa-envelope"></i> support@longwave.com</p>
-          </div>
-          <div>
-            <h1>Twitter</h1>
-            <h2 class="d-flex"><i class="fab fa-twitter"></i> Aenean lacinia bibendum nulla sed leo posuere erat a ante venenatis dapibus posuere velit aliquet.</h2>
-            <h2 class="d-flex"><i class="fab fa-twitter"></i> Donec ullamcorper metus auctor fringilla. Nullam quis risus eget.</h2>
-            <h2 class="d-flex"><i class="fab fa-twitter"></i> Vestibulum id ligula porta  euismod semper. Maecenas faucibus mollis.</h2>
-          </div>
-          <div>
-            <h1>Popular Posts</h1>
-            <h2>Vivamus sagittis lacus vel augue laoreet rutrum dolor auctor.
-            <span>14 Nov, 2012</span>
-            </h2>
-            <h2>Scelerisque nisl consectetur et.
-              <span>22 May, 2012</span>
-            </h2>
-            <h2>Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-              <span>15 July, 2012</span>
-            </h2>
-          </div>
-          <div>
-            <h1>About Us</h1>
-            <h2>Vestibulum id ligula porta felis euismod semper. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. </h2>
-            <h2>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus curabitur blandit <tempus class=""></tempus></h2>
-          </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section class="section-testmonials">
+            <div class="container full-width">
+                <div class="bf-testimonial-slick">
+                    <div class="bf-testimonial-slick-single">
+                        <div class="bf-testimonial-title">
+                            <i class="fas fa-quote-right"></i>
+                        </div>
+                        <div class="bf-testimonial-message">
+                            <p>
+                                Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at
+                                eget metus. Duis mollis, est non commodo luctus erat porttitor.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="bf-testimonial-slick-single">
+                        <div class="bf-testimonial-title">
+                            <i class="fas fa-quote-right"></i>
+                        </div>
+                        <div class="bf-testimonial-message">
+                            <p>After WordPress release 5.0 with Gutenberg as a default editor, I really annoying with
+                                it. But Qubely makes it so easy.</p>
+                        </div>
+                    </div>
+                    <div class="bf-testimonial-slick-single">
+                        <div class="bf-testimonial-title">
+                            <i class="fas fa-quote-right"></i>
+                        </div>
+                        <div class="bf-testimonial-message">
+                            <p>I strongly believe Gutenberg haters gonna love this as well 😀 Polished, organized, well
+                                planned, eye catching and useful Gutenberg</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer id="footer">
+        <div class="container d-flex justify-content-between footer-grid">
+            <div class="footer-col">
+                <strong class="title">Get In Touch</strong>
+                <ul>
+                    <li>Fusce dapibus, tellus commodo, tortor mauris condimentum utellus fermentum, porta sem malesuada
+                        magna.
+                    </li>
+                    <li><i class="fas fa-map-marker-alt"></i> Moonshine Street No: 14/05 Light City, Jupiter</li>
+                    <li><i class="fas fa-tty"></i> 0247 541 65 87</li>
+                    <li><i class="fas fa-envelope"></i> support@longwave.com</li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <strong class="title">Twitter</strong>
+                <ul>
+                    <li><i class="fab fa-twitter"></i> Aenean lacinia bibendum nulla sed leo posuere erat a
+                        ante venenatis dapibus posuere velit aliquet.
+                    </li>
+                    <li><i class="fab fa-twitter"></i> Donec ullamcorper metus auctor fringilla. Nullam quis
+                        risus eget.
+                    </li>
+                    <li><i class="fab fa-twitter"></i> Vestibulum id ligula porta euismod semper. Maecenas
+                        faucibus mollis.
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <strong class="title">Popular Posts</strong>
+                <ul>
+                    <li>Vivamus sagittis lacus vel augue laoreet rutrum dolor auctor.
+                    </li>
+                    <li>Scelerisque nisl consectetur et.</li>
+                    <li>Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus
+                        commodo,
+                        tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <strong class="title">About Us</strong>
+                <ul>
+                    <li>Vestibulum id ligula porta felis euismod semper. Duis mollis, est non commodo luctus, nisi erat
+                        porttitor ligula, eget lacinia odio sem nec elit.
+                    </li>
+                    <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus curabitur
+                        blandit
+                    </li>
+                </ul>
+            </div>
         </div>
         <div id="footer-copyright">
-          <p>© 2013 Marble. All rights reserved. Theme by elemis.</p>
+            <p>© 2013 Marble. All rights reserved. Theme by elemis.</p>
         </div>
-      </footer>
-    </div>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/custom.js"></script>
-  </body>
+    </footer>
+</div>
+<script src="js/jquery.min.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/custom.js"></script>
+</body>
 </html>
