JO-19 delete extra css files give all empty div class.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/slick-slider.css"/>
     <link rel="stylesheet" href="css/font-awesome.css"/>
     <link rel="stylesheet" href="css/slick.min.css"/>
-    <link rel="stylesheet" href="css/slick-theme.min.css"/>
     <title>Sass Project</title>
 </head>
 <body>
@@ -29,8 +28,7 @@
             <i class="fas fa-bars hamburger-menu" id="hamburger-hide"></i>
         </div>
         <div class="sidenav">
-            <a href="javascript:void(0)" class="closebtn">&times;</a>
-            <nav id="nav-mobile">
+            <a href="#" class="closebtn">&times;</a>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -39,7 +37,6 @@
                     <li><a href="#">features</a></li>
                     <li><a href="#">contact</a></li>
                 </ul>
-            </nav>
         </div>
     </header>
     <main id="main">
@@ -84,7 +81,7 @@
                 <div class="section-work-grid d-flex flex-wrap">
                     <div class="col">
                         <img class="img-responsive" src="images/img-1.png" alt="img 1"/>
-                        <div>
+                        <div class="col-content">
                             <h4>Nobis Business Card</h4>
                             <h5>Business Card, Graphic</h5>
                             <p>Sed posuere consectetur est at lobortis. Porta sagittis lacus vel augue laoreet
@@ -93,7 +90,7 @@
                     </div>
                     <div class="col">
                         <img class="img-responsive" src="images/img-2.png" alt="img 2"/>
-                        <div>
+                        <div class="col-content">
                             <h4>New Fun Project</h4>
                             <h5>Web Design, Application</h5>
                             <p>Nulla vitae elit libero, a pharetra augue. Donec sed odio dui. Vestibulum id ligula porta
@@ -102,7 +99,7 @@
                     </div>
                     <div class="col">
                         <img class="img-responsive" src="images/img-3.png" alt="img 3"/>
-                        <div>
+                        <div class="col-content">
                             <h4>Passionaries Branding Cover</h4>
                             <h5>Branding, Graphic Design</h5>
                             <p>Curabitur blandit tempus porttitor. Donec id elit non mi porta gravida at eget metus.</p>
