JO-19 light and dark mode completed.

--- a/index.html
+++ b/index.html
@@ -23,20 +23,21 @@
                     <li><a href="#">service</a></li>
                     <li><a href="#">features</a></li>
                     <li><a href="#">contact</a></li>
+                    <li><a href="#"><i class="fas fa-moon" id="switcher-theme"></i></a></li>
                 </ul>
             </nav>
             <i class="fas fa-bars hamburger-menu" id="hamburger-hide"></i>
         </div>
         <div class="sidenav">
             <a href="#" class="closebtn">&times;</a>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Journal</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">features</a></li>
-                    <li><a href="#">contact</a></li>
-                </ul>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Journal</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">features</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
         </div>
     </header>
     <main id="main">
